syntax = "proto3";

package grpc;
option go_package = "github.com/megaspacelab/megaconnect/grpc";

import "google/protobuf/empty.proto";

// WorkflowApi handles workflow related requests.
service WorkflowApi {
    // DeployWorkflow deploys a workflow to the network.
    rpc DeployWorkflow(DeployWorkflowRequest) returns (DeployWorkflowResponse);

    // UndeployWorkflow undeploys a workflow from the network.
    rpc UndeployWorkflow(UndeployWorkflowRequest) returns (google.protobuf.Empty);
}

message DeployWorkflowRequest {
    // Payload is the binary representation of the workflow
    bytes payload = 1;
}

message UndeployWorkflowRequest {
    // WorkflowId is the ID of workflow that needs to be undeployed
    bytes workflow_id = 1;
}

message DeployWorkflowResponse {
    // WorkflowId is the ID of the deployed workflow
    bytes workflow_id = 1;
}
